@@ -232,12 +232,12 @@ class EntryProxy(SCons.Util.Proxy):
 
     def __get_filebase(self):
         name = self.get().name
-        return SCons.Util.SpecialAttrWrapper(os.path.splitext(name)[0],
+        return SCons.Util.SpecialAttrWrapper(SCons.Util.splitext(name)[0],
                                              name + "_filebase")
 
     def __get_suffix(self):
         name = self.get().name
-        return SCons.Util.SpecialAttrWrapper(os.path.splitext(name)[1],
+        return SCons.Util.SpecialAttrWrapper(SCons.Util.splitext(name)[1],
                                              name + "_suffix")
 
     def __get_file(self):
@@ -248,7 +248,7 @@ class EntryProxy(SCons.Util.Proxy):
         """Return the file's directory and file name, with the
         suffix stripped."""
         entry = self.get()
-        return SCons.Util.SpecialAttrWrapper(os.path.splitext(entry.get_path())[0],
+        return SCons.Util.SpecialAttrWrapper(SCons.Util.splitext(entry.get_path())[0],
                                              entry.name + "_base")
 
     def __get_posix_path(self):
@@ -499,7 +499,7 @@ class Entry(Base):
         return node.get_found_includes(env, scanner, target)
 
     def scanner_key(self):
-        return os.path.splitext(self.name)[1]
+        return SCons.Util.splitext(self.name)[1]
 
     def get_contents(self):
         """Fetch the contents of the entry.
@@ -1154,7 +1154,7 @@ class File(Base):
         return self.dir.root()
 
     def scanner_key(self):
-        return os.path.splitext(self.name)[1]
+        return SCons.Util.splitext(self.name)[1]
 
     def get_contents(self):
         if not self.rexists():
